# claude-ecom

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
agents/: ecom-cart.md  ecom-competitors.md  ecom-conversion.md  ecom-copy.md  ecom-cro.md  ecom-header.md  ecom-hero.md  ecom-mobile.md  ecom-offers.md  ecom-performance.md  ecom-products.md  ecom-report.md  ecom-retention.md  ecom-seo.md  ecom-storefront.md  ecom-trust-offers.md  ecom-trust.md  ecom-upsells.md
docs/: market-expectations.md
scripts/: competitor_scan.py  ecom_report.py  extract_brand.py  fetch_page.py  pagespeed.py  parse_report.py  schemas.py
skills/ecom/: SKILL.md
skills/ecom-audit/: SKILL.md
skills/ecom-competitors/: SKILL.md
skills/ecom-copy/: SKILL.md
skills/ecom-cro/: SKILL.md
skills/ecom-mobile/: SKILL.md
skills/ecom-offers/: SKILL.md
skills/ecom-performance/: SKILL.md
skills/ecom-products/: SKILL.md
skills/ecom-quick/: SKILL.md
skills/ecom-recheck/: SKILL.md
skills/ecom-retention/: SKILL.md
skills/ecom-seo/: SKILL.md
skills/ecom-trust/: SKILL.md
tests/: test_fetch_page.py
