[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-ecom"
version = "1.0.0"
description = "E-commerce store audit suite for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "weasyprint>=62.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pillow>=10.0",
    "lxml>=5.0",
]

[project.scripts]
ecom-report = "scripts.ecom_report:main"
ecom-fetch = "scripts.fetch_page:main"
ecom-pagespeed = "scripts.pagespeed:main"
ecom-competitors = "scripts.competitor_scan:main"
